syntax = "proto3";

option csharp_namespace = "MyServer";

service FileProtoService{
	rpc SendFileStream(stream Chunk) returns(SendResult);
}

message Chunk{
	bytes Content = 1;
}

message SendResult{
	bool Success = 1;
}